--- a/client/views/partials/useredit.html
+++ b/client/views/partials/useredit.html
@@ -6,7 +6,7 @@
             <img ng-src="../img/pics/user{{ user.image_id }}.png" class="user-pic-big">
             <div>
                 <a ng-href="/userlds/{{user.user_id}}">
-                    <h4 class="userDesignsButton">I miei Progetti</h4>
+                    <h4 class="userDesignsButton">I miei progetti</h4>
                 </a>
             </div>
         </div>
@@ -25,9 +25,9 @@
 
                     <div class="errorBoxTab">
                         <span class="errorTipTab"
-                              ng-show="(learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Required!</span>
-                        <span class="errorTipTab" ng-show="LdName.ldName.$error.pattern">The design name cannot contain this symbol.</span>
-                        <span class="errorTipTab" ng-show="LdName.ldName.$error.maxlength">The design name cannot be longer than 50 characters.</span>
+                              ng-show="(learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Necessario!</span>
+                        <span class="errorTipTab" ng-show="LdName.ldName.$error.pattern">Simbolo non permesso.</span>
+                        <span class="errorTipTab" ng-show="LdName.ldName.$error.maxlength">Massimo 50 caratteri .</span>
                     </div>
                 </div>
             </form>
@@ -44,9 +44,9 @@
 
                     <div class="errorBoxTab">
                         <span class="errorTipTab"
-                              ng-show="(learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Required!</span>
-                        <span class="errorTipTab" ng-show="LdName.ldName.$error.pattern">The design name cannot contain this symbol.</span>
-                        <span class="errorTipTab" ng-show="LdName.ldName.$error.maxlength">The design name cannot be longer than 50 characters.</span>
+                              ng-show="(learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Necessario!</span>
+                        <span class="errorTipTab" ng-show="LdName.ldName.$error.pattern">Simbolo non permesso.</span>
+                        <span class="errorTipTab" ng-show="LdName.ldName.$error.maxlength">Massimo 50 caratteri .</span>
                     </div>
                 </div>
             </form>
@@ -63,9 +63,9 @@
 
                     <div class="errorBoxTab">
                         <span class="errorTipTab"
-                              ng-show="(learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Required!</span>
-                        <span class="errorTipTab" ng-show="LdName.ldName.$error.pattern">The design name cannot contain this symbol.</span>
-                        <span class="errorTipTab" ng-show="LdName.ldName.$error.maxlength">The design name cannot be longer than 50 characters.</span>
+                              ng-show="(learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Necessario!</span>
+                        <span class="errorTipTab" ng-show="LdName.ldName.$error.pattern">Simbolo non permesso.</span>
+                        <span class="errorTipTab" ng-show="LdName.ldName.$error.maxlength">Massimo 50 caratteri .</span>
                     </div>
                 </div>
             </form>
@@ -82,9 +82,9 @@
 
                     <div class="errorBoxTab">
                         <span class="errorTipTab"
-                              ng-show="(learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Required!</span>
-                        <span class="errorTipTab" ng-show="LdName.ldName.$error.pattern">The design name cannot contain this symbol.</span>
-                        <span class="errorTipTab" ng-show="LdName.ldName.$error.maxlength">The design name cannot be longer than 50 characters.</span>
+                              ng-show="(learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Necessario!</span>
+                        <span class="errorTipTab" ng-show="LdName.ldName.$error.pattern">Simbolo non permesso.</span>
+                        <span class="errorTipTab" ng-show="LdName.ldName.$error.maxlength">Massimo 50 caratteri .</span>
                     </div>
                 </div>
             </form>
@@ -101,9 +101,9 @@
 
                     <div class="errorBoxTab">
                         <span class="errorTipTab"
-                              ng-show="(learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Required!</span>
-                        <span class="errorTipTab" ng-show="LdName.ldName.$error.pattern">The design name cannot contain this symbol.</span>
-                        <span class="errorTipTab" ng-show="LdName.ldName.$error.maxlength">The design name cannot be longer than 50 characters.</span>
+                              ng-show="(learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Necessario!</span>
+                        <span class="errorTipTab" ng-show="LdName.ldName.$error.pattern">Simbolo non permesso.</span>
+                        <span class="errorTipTab" ng-show="LdName.ldName.$error.maxlength">Massimo 50 caratteri .</span>
                     </div>
                 </div>
             </form>
@@ -120,9 +120,9 @@
 
                     <div class="errorBoxTab">
                         <span class="errorTipTab"
-                              ng-show="(learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Required!</span>
-                        <span class="errorTipTab" ng-show="LdName.ldName.$error.pattern">The design name cannot contain this symbol.</span>
-                        <span class="errorTipTab" ng-show="LdName.ldName.$error.maxlength">The design name cannot be longer than 50 characters.</span>
+                              ng-show="(learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Necessario!</span>
+                        <span class="errorTipTab" ng-show="LdName.ldName.$error.pattern">Simbolo non permesso.</span>
+                        <span class="errorTipTab" ng-show="LdName.ldName.$error.maxlength">Massimo 50 caratteri .</span>
                     </div>
                 </div>
             </form>
