--- a/client/views/partials/users.html
+++ b/client/views/partials/users.html
@@ -3,9 +3,9 @@
 
         <div class="top-margin zero">
             <div class="btnContent btnActive btnTitle">
-                <h4 id="searchBoxHeader">Find Users</h4>
+                <h4 id="searchBoxHeader">Trova colleghi</h4>
                 <div class="searchBoxDiv">
-                    <i class="icon-filter"></i> <input type="search" class="searchBoxInput" ng-model="search" placeholder="filter users..." />
+                    <i class="icon-filter"></i> <input type="search" class="searchBoxInput" ng-model="search" placeholder="filtra utenti..." />
 
                 </div>
                 </div>
@@ -17,19 +17,19 @@
                                 <p>&nbsp;</p>
                             </div>
                             <div class="colTable colUser1">
-                                <p><a href="" ng-click="predicate = 'user_name'; reverse=!reverse" class="whiteText">First Name <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
+                                <p><a href="" ng-click="predicate = 'user_name'; reverse=!reverse" class="whiteText">Nome <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
                             </div>
                             <div class="colTable colUser2">
-                                <p><a href="" ng-click="predicate = 'last_name'; reverse=!reverse" class="whiteText">Last Name <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
+                                <p><a href="" ng-click="predicate = 'last_name'; reverse=!reverse" class="whiteText">Cognome <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
                             </div>
                             <div class="colTable colUser3">
-                                <p><a href="" ng-click="predicate = 'workplace'; reverse=!reverse" class="whiteText">Workplace <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
+                                <p><a href="" ng-click="predicate = 'workplace'; reverse=!reverse" class="whiteText">Luogo di lavoro <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
                             </div>
                             <div class="colTable colUser4">
-                                <p><a href="" ng-click="predicate = 'city'; reverse=!reverse" class="whiteText">City <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
+                                <p><a href="" ng-click="predicate = 'city'; reverse=!reverse" class="whiteText">Città <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
                             </div>
                             <div class="colTable colUser5">
-                                <p><a href="" ng-click="predicate = 'country'; reverse=!reverse" class="whiteText">Country <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
+                                <p><a href="" ng-click="predicate = 'country'; reverse=!reverse" class="whiteText">Paese <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
                             </div>
                             <div class="clearfix"></div>
                         </div>
