--- a/client/views/partials/404.html
+++ b/client/views/partials/404.html
@@ -3,8 +3,8 @@
         <div class="boardTop"></div>
         <div class="boardLeft"></div>
         <div class="boardBody">
-            <h1>Error 404</h1>
-            <h3>Sorry, we couldn't find that page!</h3>
+            <h1>Errore 404</h1>
+            <h3>Ci dispiace, ma non riusciamo a trovare questa pagina!</h3>
         </div>
     <div class="boardRight"></div>
     <div class="boardBottom"></div>
