--- a/client/views/partials/lds.html
+++ b/client/views/partials/lds.html
@@ -4,9 +4,9 @@
 
         <div class="top-margin zero">
             <div class="btnContent btnActive btnTitle">
-                    <h4 id="searchBoxHeader">Explore Learning Designs</h4>
+                    <h4 id="searchBoxHeader">Esplora i progetti didattici</h4>
                     <div class="searchBoxDiv">
-                        <i class="icon-filter"></i> <input type="search" class="searchBoxInput" ng-model="search" placeholder="filter designs..." />
+                        <i class="icon-filter"></i> <input type="search" class="searchBoxInput" ng-model="search" placeholder="filtra i progetti..." />
 
                     </div>
 
@@ -16,19 +16,19 @@
                 <div class="ldTable">
                     <div class="headerUserTable">
                         <div class="colTable colLD1">
-                            <p><a href="" ng-click="predicate = 'ld_name'; reverse=!reverse" class="whiteText">Design Name <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
+                            <p><a href="" ng-click="predicate = 'ld_name'; reverse=!reverse" class="whiteText">Nome del progetto <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
                         </div>
                         <div class="colTable colLD2">
-                            <p><a href="" ng-click="predicate = 'qcers[0].qcer_name'; reverse=!reverse" class="whiteText"> QCER Levels <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
+                            <p><a href="" ng-click="predicate = 'qcers[0].qcer_name'; reverse=!reverse" class="whiteText">Livelli QCER<i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
                         </div>
                         <div class="colTable colLD3">
-                            <p><a href="" ng-click="predicate = 'ld_scope'; reverse=!reverse" class="whiteText">Scope <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
+                            <p><a href="" ng-click="predicate = 'ld_scope'; reverse=!reverse" class="whiteText">Ambito <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
                         </div>
                         <div class="colTable colLD4">
-                            <p><a href="" ng-click="predicate = 'user_name'; reverse=!reverse" class="whiteText">Author <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
+                            <p><a href="" ng-click="predicate = 'user_name'; reverse=!reverse" class="whiteText">Autore <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
                         </div>
                         <div class="colTable colLD5">
-                            <p><a href="" ng-click="predicate = 'ld_creation_date'; reverse=!reverse" class="whiteText">Created <i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
+                            <p><a href="" ng-click="predicate = 'ld_creation_date'; reverse=!reverse" class="whiteText">Creato il<i class="icon-arrow-up icon-white"></i><i class="icon-arrow-down icon-white"></i></a></p>
                         </div>
                         <div class="clearfix"></div>
                     </div>
@@ -39,7 +39,7 @@
                                     <p>{{ learningDesign.ld_name }}</p>
                                 </div>
                                 <div class="colTable colLD2">
-                                    <p ng-repeat="qcer in learningDesign.qcers" class="qcerList">{{ qcer.qcer_name }}</p> <p ng-show="!learningDesign.qcers">Not defined</p>
+                                    <p ng-repeat="qcer in learningDesign.qcers" class="qcerList">{{ qcer.qcer_name }}</p> <p ng-show="!learningDesign.qcers">Non definito </p>
 
                                 </div>
                                 <div class="colTable colLD3">
@@ -49,7 +49,7 @@
                                     <p>{{ learningDesign.user_name }} {{ learningDesign.user_last_name }} </p>
                                 </div>
                                 <div class="colTable colLD5">
-                                    <p>{{ learningDesign.ld_creation_date | date:'yyyy MMM d' }} </p>
+                                    <p>{{ learningDesign.ld_creation_date | date:'d-M-yyyy' }} </p>
                                 </div>
                             </a>
                         </div>
